--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <body>
 
     <div class="top">
-      <img class="top-cloud" src="https://emojipedia.org/samsung/one-ui-6.0/cloud" alt="cloud">
+      <img class="top-cloud" src="/images/cloud.png" alt="cloud">
       <h1>I'm Karan</h1>
       <p>a <span class="pro">pro</span>grammer.</p>
-      <img class="bottom-cloud" src="https://emojipedia.org/samsung/one-ui-6.0/cloud" alt="cloud">
-      <img class="forest" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flovepik.com%2Fimages%2Fpng-mountain.html&psig=AOvVaw06-lCPmxssnH0FsQNPsHD4&ust=1700393546393000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCPj-w8y5zYIDFQAAAAAdAAAAABAQ" alt="forest">
+      <img class="bottom-cloud" src="/images/cloud.png" alt="cloud">
+      <img class="forest" src="/images/forest.png.png" alt="forest">
       
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img src="https://www.flaticon.com/free-icon/boy_1999625" alt="profile">
+        <img src="/images/boy.png.png" alt="profile">
         <h2>Hello.</h2>
         <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
       </div>
@@ -31,7 +31,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="dev1" src="https://www.flaticon.com/free-icon/backend_6213731" alt="developer">
+          <img class="dev1" src="/images/dev.png.png" alt="developer">
           <h2>Lorem & Ipsum</h2>
           <p class="descpr2">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
         </div>
