--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <body>
 
     <div class="top">
-      <img class="top-cloud" src="/cloud.png" alt="cloud">
+      <img class="top-cloud" src="cloud.png" alt="cloud">
       <h1>I'm Karan</h1>
       <p>a <span class="pro">pro</span>grammer.</p>
-      <img class="bottom-cloud" src="/cloud.png" alt="cloud">
-      <img class="forest" src="/forest.png.png" alt="forest">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud">
+      <img class="forest" src="forest.png.png" alt="forest">
       
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img src="/boy.png.png" alt="profile">
+        <img src="boy.png.png" alt="profile">
         <h2>Hello.</h2>
         <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
       </div>
@@ -31,7 +31,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="dev1" src="/dev.png.png" alt="developer">
+          <img class="dev1" src="dev.png.png" alt="developer">
           <h2>Lorem & Ipsum</h2>
           <p class="descpr2">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
         </div>
